<resources>
    <string name="app_name">RugbyScore</string>

    <string name="firstTeamName">Team A</string>
    <string name="secondTeamName">Team B</string>

    <string name="goalTry">Try</string>
    <string name="penalty">Penalty</string>
    <string name="goal">Goal</string>
    <string name="conversion">Conversion</string>

    <string name="rugbyBall">rugby ball</string>

    <string name="reset">Reset</string>
    <string name="nameTeams">Team Names</string>

    <string name="nameTeamA">Name Team A</string>
    <string name="nameTeamB">Name Team B</string>
    <string name="done">Done</string>
</resources>
